--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,13 @@ language: php
 php:
   - '5.5'
   - '5.6'
+  - '7.0'
 
 sudo: false
 install:
-  - composer require "symfony/symfony:${SYMFONY_VERSION}"
+  - composer install
 script:
-  - ./vendor/bin/phpunit
-  - composer run-script behat
-env:
-  - SYMFONY_VERSION=2.7.*
-  - SYMFONY_VERSION=2.8.*
-  - SYMFONY_VERSION=3.*
+  - composer run-script test
 cache:
   files:
     - composer.lock
