Add ft and ut folder + config + coverage

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -33,10 +33,10 @@ build:
             -
                 command: phpcs-run # @see https://scrutinizer-ci.com/docs/tools/php/code-sniffer/
             -
-                command: ./vendor/bin/phpunit --coverage-clover=coverage-report
+                command: composer run-script coverage-clover
                 idle_timeout: 1200
                 coverage:
-                    file: 'coverage-report'
+                    file: 'coverage/clover.xml'
                     format: 'php-clover'
 
 tools:
