--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "2.*"
+        "squizlabs/php_codesniffer": "2.*",
+        "phpunit/phpcov": "*",
+        "symfony/console": "~2.2"
     },
     "autoload": {
         "psr-0": {
@@ -25,7 +27,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "UnitTests\\": "tests/unit/",
+            "FunctionalTests\\": "tests/functional/"
         }
     },
     "scripts": {
@@ -38,10 +41,23 @@
         "cd app_test && ../vendor/bin/behat --no-snippets --strict --colors --format progress --profile custom-config"
       ],
       "test-u": [
-        "./vendor/bin/phpunit"
+        "./vendor/bin/phpunit --colors=auto -c phpunit.ut.xml",
+        "./vendor/bin/phpunit --colors=auto -c phpunit.ft.xml"
       ],
       "cs": [
         "./vendor/bin/phpcs"
+      ],
+      "coverage": [
+        "@coverage-base",
+        "phpcov merge --html coverage coverage"
+      ],
+      "coverage-clover": [
+        "@coverage-base",
+        "phpcov merge --clover coverage/clover.xml coverage"
+      ],
+      "coverage-base": [
+        "./vendor/bin/phpunit --colors=auto -c phpunit.ut.xml --coverage-php coverage/unit.cov",
+        "./vendor/bin/phpunit --colors=auto -c phpunit.ft.xml --coverage-php coverage/functional.cov"
       ]
     }
 }
