--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -33,7 +33,7 @@ build:
             -
                 command: phpcs-run # @see https://scrutinizer-ci.com/docs/tools/php/code-sniffer/
             -
-                command: composer run-script coverage-clover
+                command: mkdir coverage && composer run-script coverage-clover
                 idle_timeout: 1200
                 coverage:
                     file: 'coverage/clover.xml'
