--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,8 +20,11 @@
          bootstrap="vendor/autoload.php"
 >
     <testsuites>
-        <testsuite name="Behat3 Utils Extension Test Suite">
+        <testsuite name="unit">
             <directory>tests/unit</directory>
+        </testsuite>
+        <testsuite name="functional">
+            <directory>tests/functional</directory>
         </testsuite>
     </testsuites>
 
