--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "2.*",
-        "phpunit/phpcov": "*",
-        "symfony/console": "~2.2"
+        "squizlabs/php_codesniffer": "2.*"
     },
     "autoload": {
         "psr-0": {
