--- a/composer.json
+++ b/composer.json
@@ -4,21 +4,16 @@
   "keywords": ["Behat3", "Utils", "Debug", "Logger"],
   "type": "library",
   "license": "MIT",
+  "version": "0.1.0",
   "authors": [
     {
       "name": "yoanm",
-      "email": "yoanm@users.noreply.github.com"
+      "email": "yoanm@users.noreply.github.com",
+      "role": "Developer"
     }
   ],
-  "require": {
-    "php": ">=5.5",
-    "behat/behat": "~3.0",
-    "monolog/monolog": "~1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "squizlabs/php_codesniffer": "2.*",
-    "matthiasnoback/symfony-dependency-injection-test": "1.*"
+  "support": {
+    "issues": "https://github.com/yoanm/BehatUtilsExtension/issues"
   },
   "autoload": {
     "psr-0": {
@@ -30,6 +25,16 @@
       "Technical\\": "tests/Technical",
       "Functional\\": "tests/Functional"
     }
+  },
+  "require": {
+    "php": ">=5.5",
+    "behat/behat": "~3.0",
+    "monolog/monolog": "~1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "squizlabs/php_codesniffer": "2.*",
+    "matthiasnoback/symfony-dependency-injection-test": "1.*"
   },
   "scripts": {
     "test": [
