--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -29,7 +29,7 @@ build:
     tests:
         override:
             -
-                command: phpcs-run # @see https://scrutinizer-ci.com/docs/tools/php/code-sniffer/
+                command: composer run-script cs-checkstyle
             -
                 command: mkdir coverage && composer run-script coverage-clover
                 idle_timeout: 1200
