Fix missing composer script

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,9 @@
     "cs": [
       "./vendor/bin/phpcs"
     ],
+    "cs-checkstyle": [
+      "./vendor/bin/phpcs --report=checkstyle"
+    ],
     "coverage-clover": [
       "./vendor/bin/phpunit --coverage-clover coverage/clover.xml"
     ],
