--- a/composer.json
+++ b/composer.json
@@ -41,25 +41,37 @@
     "matthiasnoback/symfony-dependency-injection-test": "1.*"
   },
   "scripts": {
+    "build": [
+      "@composer install --prefer-dist --optimize-autoloader --ansi --verbose --no-suggest --no-interaction"
+    ],
     "test": [
       "@t-test",
       "@f-test"
     ],
     "f-test": [
-      "./vendor/bin/phpunit --colors=auto --testsuite functional",
+      "./vendor/bin/phpunit --testsuite functional",
       "./vendor/bin/behat --no-snippets --strict --colors --format progress"
     ],
     "t-test": [
-      "./vendor/bin/phpunit --colors=auto --testsuite technical"
+      "./vendor/bin/phpunit --testsuite technical"
     ],
     "cs": [
       "./vendor/bin/phpcs"
     ],
-    "coverage-clover": [
-      "./vendor/bin/phpunit --coverage-clover coverage/clover.xml"
-    ],
     "coverage": [
       "./vendor/bin/phpunit --coverage-html coverage"
+    ],
+    "ci": [
+      "@ci-build",
+      "@cs",
+      "@test"
+    ],
+    "ci-build": [
+      "mkdir -p build/coverage",
+      "@composer install --prefer-dist --ansi --verbose --no-suggest --no-interaction"
+    ],
+    "coverage-clover": [
+      "./vendor/bin/phpunit --coverage-clover build/coverage/clover.xml"
     ]
   }
 }
