--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,7 @@
       "./vendor/bin/phpunit --coverage-html coverage"
     ],
     "coverage-clover": [
-      "./vendor/bin/phpunit --coverage-clover coverage/clover.xml"
+      "./vendor/bin/phpunit --coverage-clover build/coverage/clover.xml"
     ]
   }
 }
