--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,9 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Technical\\": "tests/Technical",
-      "Functional\\": "tests/Functional",
+      "Technical\\Integration\\Yoanm\\BehatUtilsExtension\\": "tests/Technical/Integration",
+      "Technical\\Unit\\Yoanm\\BehatUtilsExtension\\": "tests/Technical/Unit",
+      "Functional\\Yoanm\\BehatUtilsExtension\\": "tests/Functional",
       "Functional\\Yoanm\\BehatUtilsExtension\\Context\\": "features/bootstrap"
     }
   },
