--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -19,7 +19,7 @@ build:
             - ~/.composer
     dependencies:
         override:
-            - composer ci-build
+            - composer build-ci
 
     environment:
         mysql: false
@@ -55,7 +55,7 @@ tools:
             simplify_boolean_return:
                 enabled: true
     external_code_coverage: false
-    php_code_coverage:      false
+    php_code_coverage: false
     php_changetracking: true
     php_cpd: true
     php_cs_fixer: false
