--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<ruleset name="Behat3 utils extension">
+<ruleset name="Behat Utils Extension">
     <file>src</file>
     <file>tests</file>
 
