--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
   "name": "yoanm/behat-utils-extension",
-  "description":  "A set of utility for Behat3",
-  "keywords": ["Behat3", "Utils", "Debug", "Logger"],
   "type": "library",
   "license": "MIT",
   "version": "0.3.0",
+  "description":  "A set of utility for Behat3",
+  "keywords": ["Behat3", "Utils", "Debug", "Logger"],
   "authors": [
     {
       "name": "yoanm",
@@ -25,9 +25,10 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Technical\\": "tests/Technical",
-      "Functional\\": "tests/Functional",
-      "FunctionalTest\\Yoanm\\BehatUtilsExtension\\Context\\": "features/bootstrap/"
+      "Technical\\Integration\\Yoanm\\BehatUtilsExtension\\": "tests/Technical/Integration",
+      "Technical\\Unit\\Yoanm\\BehatUtilsExtension\\": "tests/Technical/Unit",
+      "Functional\\Yoanm\\BehatUtilsExtension\\": "tests/Functional",
+      "Functional\\Yoanm\\BehatUtilsExtension\\BehatContext\\": "features/bootstrap"
     }
   },
   "require": {
@@ -42,7 +43,16 @@
   },
   "scripts": {
     "build": [
-      "@composer install --prefer-dist --optimize-autoloader --ansi --verbose --no-suggest --no-interaction"
+      "@composer install --prefer-dist --optimize-autoloader --ansi --no-suggest --no-interaction"
+    ],
+    "build-ci": [
+      "mkdir -p build/coverage",
+      "@composer install --prefer-dist --ansi --no-suggest --no-interaction"
+    ],
+    "ci": [
+      "@build-ci",
+      "@cs",
+      "@test"
     ],
     "test": [
       "@t-test",
@@ -60,15 +70,6 @@
     ],
     "coverage": [
       "./vendor/bin/phpunit --coverage-html coverage"
-    ],
-    "ci": [
-      "@ci-build",
-      "@cs",
-      "@test"
-    ],
-    "ci-build": [
-      "mkdir -p build/coverage",
-      "@composer install --prefer-dist --ansi --verbose --no-suggest --no-interaction"
     ],
     "coverage-clover": [
       "./vendor/bin/phpunit --coverage-clover build/coverage/clover.xml"
