--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,11 +15,12 @@ build_failure_conditions:
 build:
     cache:
         directories:
-            - vendor
             - ~/.composer
+
     dependencies:
-        override:
+        before:
             - composer global require hirak/prestissimo
+        override:
             - composer build-ci
 
     environment:
@@ -27,6 +28,7 @@ build:
         postgresql: false
         elasticsearch: false
         redis: false
+
     tests:
         override:
             - composer cs
